--- a/market/templates/market/basket.html
+++ b/market/templates/market/basket.html
@@ -107,7 +107,13 @@
                             </div>
                             <div class="modal-footer">
                               <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                              <button type="button" class="btn btn-primary" data-dismiss="modal" data-toggle="modal" data-target="#SuccessPayment">Buy</button>
+                                {% if client_data_filled %}
+                                <button type="button" class="btn btn-primary" data-dismiss="modal" data-toggle="modal" data-target="#SuccessPayment">Buy</button>
+                                {% else %}
+                                <a href="{% url 'profile' %}">
+                                    <button type="button" class="btn btn-secondary">Fill my data</button>
+                                </a>
+                                {% endif %}
                             </div>
                           </div>
                         </div>
